# AutoScreen

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
autoscreen/: __init__.py  acquire.py  analyze.py  campaign.py  cli.py  config.py  data.py  experiment.py  logging_utils.py  metrics.py  mock_backend.py  model.py  plate.py  robot_client.py  run.py  run_campaign.py  svgplot.py
autoscreen/core/: __init__.py  benchmark.py  campaign.py  candidate_state.py  constraints.py  enrichment.py  jobs.py  library.py  metrics.py  model.py  objectives.py  observations.py  oracle.py  persist.py  types.py
autoscreen/executors/: __init__.py  base.py  replay.py  robot.py  sim_dock.py  vina.py
autoscreen/protocol/: __init__.py  v1.py
configs/: replay_enamine10k.yaml  replay_enamine50k.yaml  robot_mock.yaml  sim_dock_demo.yaml  vina_demo.yaml  vina_mini.yaml
docker/: Dockerfile  entrypoint.sh
docs/: vina.md  vina_setup.md
results/: results.json
robot_mock/: README.md  app.py  simulator.py
scripts/: bench_single_obj.py  install_vina_windows.ps1  prep_fps_serial.py  prep_moo_labels.py  run_vina_closed_loop.py
tests/: test_acquisition.py  test_async_campaign.py  test_cli_build.py  test_concurrency_fixes.py  test_core_store.py  test_executor_contract.py  test_metrics_aggregate_retry.py  test_p0_runtime_fixes.py  test_pending_aware.py  test_replay_campaign.py  test_robot_e2e.py  test_robot_truth.py  test_science_boundary.py  test_sim_dock_campaign.py  test_smoke.py
(+8 files in other folders)
