[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoscreen"
version = "0.2.0"
description = "Active-learning decision and task-orchestration engine for virtual and robotic screening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "h5py>=3.8",
  "pymoo>=0.6",
  "PyYAML>=6.0",
  "tqdm>=4.65",
  "httpx>=0.27",
]

[project.optional-dependencies]
robot = ["fastapi>=0.110", "uvicorn>=0.27"]
prep = ["rdkit>=2023.3.1"]
dev = [
  "pytest>=7.4",
  "pytest-timeout>=2.2",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[project.scripts]
autoscreen = "autoscreen.cli:main"

[tool.setuptools.packages.find]
include = ["autoscreen*", "robot_mock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
